# secret-santa

./: .gitignore  README.md  Taskfile.yml  gmail.py  pyproject.toml  requirements.txt  secret_santa.py  setup.py  test_secret_santa.py  tox.ini
config/: names.json.example  sms_template.jinja2
secret_santa/: __init__.py  __main__.py  api.py  cli_utils.py  cli_v2.py  config.py  crypto_utils.py  db_models.py  email_utils.py  encryption_api.py  file_utils.py  gmail.py  secret_santa.py  server.py  sms_utils.py
secret_santa/public/: style.css
secret_santa/templates/: index.jinja2  layout.jinja2  new_campaign.jinja2  past_campaign.jinja2
tests/: instructions_email.md  instructions_email_enc.md  test_config.py  test_email.py  test_encrypted_email.py  test_encryption_api.py  test_secret_santa.py
