[project]
name = "secret-santa"
version = "0.1.1"
description = "Secret Santa python implementation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "boto3>=1.42.0",
    "bs4>=0.0.2",
    "coloredlogs>=15.0.1",
    "cryptography>=46.0.3",
    "fastapi>=0.123.0",
    "fire>=0.7.1",
    "jinja2>=3.1.6",
    "markdown2>=2.5.4",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.44",
]

[dependency-groups]
dev = [
    "mypy>=1.19.0",
    "mypy-boto3>=1.41.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "types-requests>=2.32.4.20250913",
]

[tool.ruff.lint]
ignore = ["E741"]
